web: fix scrolling of panel tabs in Firefox (fixes #12340)
I do not understand why, but without `min-height: 0;` scrolling of content in
this panel is entirely broken in Firefox but not Chrome or Safari.

Codepen demonstrating the issue: https://codepen.io/slimsag/pen/mjPXyN

Fixes #12340

--- a/web/src/panel/Panel.scss
+++ b/web/src/panel/Panel.scss
@@ -53,6 +53,7 @@
     overflow-y: hidden;
     &__tabs {
         flex: 1;
+        min-height: 0; /* needed for Firefox for content scrolling to work properly; See sourcegraph/sourcegraph#12340 and https://codepen.io/slimsag/pen/mjPXyN */
         &-content {
             flex: 1;
             &--scroll {
